[package]
name = "progression-website"
version = "0.1.0"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Website for learning progression."
repository = "https://github.com/droundy/progression-website"
keywords = ["template", "latex", "html", "display"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
csv = "1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
tempfile = "3.0.3"
internment = "0.3.6"
warp = "0.1.9"
display-as = { version = "0.3.5", features = ["warp"] }
slug = "0.1.4"
simple-error = "0.1.9"
