[package]
name = "progression-website"
version = "0.1.3"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Website for learning progression."
repository = "https://github.com/droundy/progression-website"
keywords = ["template", "latex", "html", "display"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
csv = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tempfile = "3.0.3"
warp = "0.2.4"
tokio = { version = "0.2", features = ["full"] }
display-as = { version = "0.5", features = ["usewarp"] }
dot = "0.1.4"
rand = "0.7"
bytes = "0.5"
lazy_static = "1.3.0"
clapme = "0.1.13"

pulldown-cmark = { version = "0.8.0", default-features = false }
html2md = "0.2.5"
